# crisis-dispatch-openenv

./: .dockerignore  .env.example  .gitignore  BEGINNER_DEPLOYMENT_GUIDE.md  Dockerfile  README.md  __init__.py  client.py  hard_out.txt  inference.py  models.py  openenv.yaml  piplist.txt  prevalidation.sh  pyproject.toml  pytest.ini  requirements.txt  validate-submission.sh
.github/workflows/: ci-hf-sync.yml
app/: __init__.py  baseline.py  environment.py  main.py  models.py  tasks.py
docs/: BEGINNER_DEPLOYMENT_GUIDE.md  BEGINNER_GUIDE.md  CHALLENGE_ALIGNMENT_AND_ENVIRONMENT.md  DEPLOYMENT_HF_SPACE.md  README.md  pre_validation.sh
server/: Dockerfile  app.py  crisis_dispatch_env_environment.py  requirements.txt
tests/: conftest.py  test_api.py  test_environment.py  test_inference.py  test_prerequisites.py
