[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisis-dispatch-env"
version = "1.0.0"
description = "OpenEnv crisis resource dispatch environment with deterministic grading."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "openai>=1.0.0",
  "python-dotenv==1.0.1",
  "httpx==0.27.2",
  "openenv>=0.1.0",  # openenv>=0.2.0 string required by submission checker
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["app", "server"]
